corrected alignment of clipboard

--- a/ui/css/treeherder-custom-styles.css
+++ b/ui/css/treeherder-custom-styles.css
@@ -87,7 +87,7 @@
 
 .logviewer-icon {
   width: 14px;
-  height: 17px;
+  height: 16px;
   vertical-align: text-top;
   opacity: 0.7;
 }
